tests/NormalTests/paczka1/fuzzy1/30726689.err
Error in line 3: pjXF5EyhgA S435 58,5
Error in line 6: S435 A951 66,6
Error in line 7: svx0 S435 22,8
Error in line 18: pjXF5EyhgA A951 30,5
Error in line 27: pjXF5EyhgA S435 7,1
